/*
 * SPDX-License-Identifier: Apache-2.0
 *
 * The OpenSearch Contributors require contributions made to
 * this file be licensed under the Apache-2.0 license or a
 * compatible open source license.
 *
 * Modifications Copyright OpenSearch Contributors. See
 * GitHub history for details.
 */

syntax = "proto3";
package org.opensearch.tasks.proto;

option java_outer_classname = "TaskResourceStatsProto";

message TaskResourceStats {
  message TaskResourceUsage {
    int64 cpuTimeInNanos = 1;
    int64 memoryInBytes = 2;
  }
  map<string, TaskResourceUsage> resourceUsage = 1;
}
